# echoforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DUCKY_LINTER_CODE_REVIEW.md  PHASE6_CODE_REVIEW.md  PHASE6_CONTENT_SAFETY.md  PHASE6_DECISIONS.md  PHASE6_PAYLOAD_FORGE_API.md  PHASE6_PAYLOAD_RESEARCH.md  PHASE6_REDTEAM_RESEARCH.md  PHASE6_SKILL_RESEARCH.md  PHASE7_FINSTRIKE_THREAT_MODEL.md
scripts/: build_protos.py  fetch_protos.py  sync_payload_library.py
skills/echoforge-flipper-mastery/: BUILD_REPORT.md  LICENSE  README.md
skills/echoforge-flipper-mastery/.claude-plugin/: marketplace.json  plugin.json
src/echoforge/: __init__.py  flipper.py
src/echoforge/actions/: __init__.py  application.py  gpio.py  hardware.py  storage.py  system.py
src/echoforge/agent/: __init__.py  approval.py  hooks.py  prompts.py  runner.py  tools.py  tools_payload.py
src/echoforge/payload/: __init__.py  duckyscript.py  irfile.py  library.py  lint_cli.py  linter.py  sidecar.py  subfile.py
src/echoforge/proto/: __init__.py
src/echoforge/safety/: __init__.py  audit.py  diff.py  permissions.py  policy.py  risk.py
src/echoforge/tools/: __init__.py  ask_claude.py  cli_test.py  explore.py  hardware_test.py  (+3 more)
tests/: test_audit.py  test_audit_modes.py  test_audit_session_wiring.py  test_diff.py  test_duckyscript_linter.py  test_flipper.py  test_payload_duckyscript.py  test_payload_irfile.py  test_payload_library.py  test_payload_sidecar.py  test_payload_subfile.py  test_payload_tools.py  test_permissions.py  test_policy.py  test_risk.py  test_with_recovery_idle_ping.py
(+34 files in other folders)
